kompose/studyk8sserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: D:\bin\kompose.exe convert -f docker-compose-vip.yml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: studyk8sserver
  name: studyk8sserver
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 8001
    - name: "8004"
      port: 8004
      targetPort: 8004
  selector:
    io.kompose.service: studyk8sserver
status:
  loadBalancer: {}
